Started draft storyline report

--- a/analysis/worksheet_analysis_report.ipynb
+++ b/analysis/worksheet_analysis_report.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hideCode": false,
+    "hideCode": true,
+    "hideOutput": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -17,7 +19,8 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "hideCode": false,
+    "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -45,18 +48,22 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "# import warnings\n",
+    "# warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "hideCode": false,
+    "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -82,6 +89,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -99,6 +108,7 @@
    "execution_count": 4,
    "metadata": {
     "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -113,6 +123,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -129,6 +141,8 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -143,6 +157,8 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -306,7 +322,10 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -330,7 +349,10 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [],
    "source": [
     "pre['id in logs'] = pre['Student ID'].apply(lambda row: worksheets.loc[worksheets[worksheets['other id']==row].index[0],'Student ID'])\n",
@@ -340,7 +362,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hideCode": true,
+    "hidePrompt": true
    },
    "source": [
     "# Overall, do students learn?\n",
@@ -349,7 +373,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "## Descriptives stats on learning"
    ]
@@ -357,7 +384,10 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -461,7 +491,10 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -492,7 +525,10 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -523,7 +559,10 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -554,7 +593,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "## Quick comparison test of scores per variable"
    ]
@@ -562,7 +604,10 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -593,7 +638,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "## How do students transition from pre to main (scatter-heatmap)"
    ]
@@ -601,7 +649,10 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -631,14 +682,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "Overall, yes students learn. Mostly their scores improve for the quantitative variables."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "## Finally, a stats model\n",
     "Followed these blogs for some stats info:\n",
@@ -652,7 +709,10 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [],
    "source": [
     "scores = pre[['id in logs']]\n",
@@ -665,7 +725,10 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -755,7 +818,10 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [],
    "source": [
     "import statsmodels.api as sm\n",
@@ -769,7 +835,10 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [],
    "source": [
     "def eta_squared(aov):\n",
@@ -787,7 +856,10 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -807,7 +879,10 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -833,7 +908,10 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -858,7 +936,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "So a high pre doesn't predict a high main score?? Interesting...\n",
     "Perhaps because the main score really tests their inquiry skills. Possibly prior knowledge neither helped nor hindered the producitivity of the student, only inquiry skills matter???\n",
@@ -868,7 +949,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "# Score and use of CVS\n",
     "## First, how many variables do students do CVS on?"
@@ -877,7 +961,10 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -911,14 +998,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "When doing CVS on 2 to 3 variables, typically it's done in the graph."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "## Are student more likely to do CVS for a variable if they know more about the variable to start with?"
    ]
@@ -926,7 +1019,10 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -974,7 +1070,10 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1012,14 +1111,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "Students with high prior knowledge for width were more likely to do CVS varying width in the graph"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "## Did CVS help students build better models?"
    ]
@@ -1027,7 +1132,10 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -1075,7 +1183,10 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1113,14 +1224,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "Clearly, doing CVS increases the score for that variable by at over half a point. Now we still have to fix this data set since we should only look at students who used a table or a graph? Also would be good to compare students who only did table to student who did graph and then compare those."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "# The order effect\n",
     "## Modeling concentration score"
@@ -1129,7 +1246,10 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [],
    "source": [
     "scores_c = main[['id in logs']]\n",
@@ -1144,7 +1264,10 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1194,7 +1317,10 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1222,7 +1348,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "source": [
     "## Modeling width score"
    ]
@@ -1230,7 +1359,10 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [],
    "source": [
     "scores_w = main[['id in logs']]\n",
@@ -1245,7 +1377,10 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1295,7 +1430,10 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1324,13 +1462,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "hide_code_all_hidden": true,
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
