--- a/analysis/initial_worksheet_analysis_report_beers_only.ipynb
+++ b/analysis/initial_worksheet_analysis_report_beers_only.ipynb
@@ -19,6 +19,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true,
     "slideshow": {
@@ -49,6 +50,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -62,6 +64,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true,
     "slideshow": {
@@ -107,6 +110,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true,
     "slideshow": {
@@ -123,6 +127,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true,
     "slideshow": {
@@ -141,6 +146,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true,
     "slideshow": {
@@ -157,6 +163,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true,
     "slideshow": {
@@ -168,19 +175,6 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -321,8 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -337,8 +332,8 @@
    ],
    "source": [
     "%reload_ext utils_read_parsing\n",
-    "ids = get_students_to_analyze_log_worksheets()\n",
-    "worksheets = get_worksheet_metadata()\n",
+    "ids = get_students_to_analyze_log_worksheets('beers')\n",
+    "worksheets = get_worksheet_metadata('beers')\n",
     "pre = get_pre_worksheet(sim='beers')\n",
     "pre= pre[pre['Student ID'].isin(worksheets[(worksheets['Type']=='p')&worksheets['Student ID'].isin(ids)]['other id'].values)]\n",
     "main = get_main_worksheet(sim='beers')\n",
@@ -350,6 +345,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -385,6 +381,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -490,8 +487,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -526,6 +533,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -560,6 +568,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -605,6 +614,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -650,6 +660,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -710,6 +721,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -726,6 +738,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -819,6 +832,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -836,6 +850,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -857,6 +872,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -880,6 +896,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -909,6 +926,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -962,6 +980,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1020,6 +1039,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1071,6 +1091,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1133,6 +1154,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1184,6 +1206,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1247,6 +1270,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1265,6 +1289,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1318,6 +1343,7 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1360,6 +1386,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1378,6 +1405,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1431,6 +1459,7 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1463,6 +1492,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1474,9 +1504,9 @@
   "anaconda-cloud": {},
   "hide_code_all_hidden": true,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1488,7 +1518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   },
   "toc": {
    "nav_menu": {},
