--- a/analysis/initial_worksheet_analysis_report_beers_only.ipynb
+++ b/analysis/initial_worksheet_analysis_report_beers_only.ipynb
@@ -19,7 +19,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true,
     "slideshow": {
@@ -163,7 +162,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true,
     "slideshow": {
@@ -317,7 +315,6 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -381,7 +378,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -498,7 +494,6 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -533,7 +528,6 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -568,7 +562,6 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -614,7 +607,6 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -660,7 +652,6 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -738,7 +729,6 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -872,7 +862,6 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -896,7 +885,6 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -926,7 +914,6 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -980,7 +967,6 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1039,7 +1025,6 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1091,7 +1076,6 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1154,7 +1138,6 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1206,7 +1189,6 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1289,7 +1271,6 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1343,7 +1324,6 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1405,7 +1385,6 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1459,7 +1438,6 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1504,9 +1482,9 @@
   "anaconda-cloud": {},
   "hide_code_all_hidden": true,
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1518,7 +1496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   },
   "toc": {
    "nav_menu": {},
